--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         margin: auto;
         display: block;
         margin-bottom: 20px;
-        background: lightblue;
+        background: red;
     }
 
     .student {
-        border-style: groove;
+        border-style: double;
         text-align: center;
         width: 50%;
         margin: auto;
